--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
                                             
             body {
                 background:  #FFE4E1;
-              background-image: "fundo.png";
+              background-image: url("https://raw.githubusercontent.com/estudantenatally/pensamentoComputacional1a/main/fundo.png");
               background-size: cover;
             }
 
